--- a/src/style.scss
+++ b/src/style.scss
@@ -323,6 +323,7 @@ main {
     width: 100%;
     margin-top: 60px;
     font-size: 40px;
+    font-family: 'RubikBold';
     text-align: center;
     text-transform: uppercase;
     color: $btnBgColTwo;
@@ -330,7 +331,7 @@ main {
     h2 {
       margin-left: 40px;
       font-size: 40px;
-      font-weight: bold;
+      font-family: 'RubikBold';
     }
   }
 
