--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,13 +210,14 @@ main {
     width: 100%;
     margin-top: 60px;
     font-size: 40px;
+    font-family: 'RubikBold';
     text-align: center;
     text-transform: uppercase;
     color: #000978; }
     .about__header h2 {
       margin-left: 40px;
       font-size: 40px;
-      font-weight: bold; }
+      font-family: 'RubikBold'; }
 
 .carousel {
   display: flex;
