--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ h3 {
 @font-face {
   font-family: 'RubikBold';
   src: url("../../src/fonts/Rubik-Bold.ttf");
-  font-weight: 500; }
+  font-weight: 700; }
 
 * {
   font-family: "RubikRegular"; }
@@ -24,33 +24,31 @@ html {
   overflow-x: hidden; }
 
 header {
-  position: relative;
-  height: 125px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: #FF182F; }
-  header .logo {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 9%;
-    height: 70px;
-    width: 370px; }
-  header .button-take {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 5%;
-    width: 260px;
-    height: 70px;
-    background: linear-gradient(0deg, #000978 0%, #22339e 100%);
-    color: white;
-    font-size: 28px;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 7px;
-    font-weight: bold; }
+  header .header {
+    position: relative;
+    height: 135px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 17px;
+    max-width: 1170px; }
+    header .header .logo {
+      height: 70px;
+      width: 370px;
+      margin-left: 14px; }
+    header .header .button-take {
+      width: 270px;
+      height: 70px;
+      background: linear-gradient(0deg, #000978 0%, #22339e 100%);
+      color: white;
+      font-size: 28px;
+      text-transform: uppercase;
+      border: none;
+      border-radius: 7px;
+      font-weight: bold;
+      margin-right: -46px;
+      letter-spacing: 1px; }
 
 main {
   height: 730px;
@@ -64,14 +62,16 @@ main {
     flex-direction: column; }
     main .loan__item {
       margin-bottom: 60px; }
+      main .loan__item-down {
+        margin-top: 8px; }
     main .loan .option-money {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 350px;
       width: 60%;
-      margin: 500px auto 30px auto;
-      padding-left: 80px; }
+      margin: 490px auto 30px auto;
+      padding-left: 90px; }
   main .condition-sliders__text {
     margin-left: -20px;
     text-align: left;
@@ -80,7 +80,7 @@ main {
     color: #22339E; }
   main .condition-sliders__value {
     text-align: right;
-    margin-left: 20px;
+    margin-left: 10px;
     transform: translateY(-15px);
     text-transform: uppercase;
     font-size: 28px;
@@ -89,7 +89,7 @@ main {
   main .condition-sliders__button-minus {
     display: flex;
     justify-content: center;
-    padding-top: 22px;
+    padding-top: 32px;
     width: 70px;
     height: 70px;
     border: none;
@@ -102,19 +102,19 @@ main {
       outline: none; }
   main .condition-sliders__input {
     -webkit-appearance: none;
-    margin-top: 25px;
+    margin-top: 30px;
     margin-left: 30px;
     margin-right: 30px;
     width: 63%;
-    height: 20px;
+    height: 15px;
     padding: 0px;
     background: linear-gradient(90deg, #000978 1%, #FF182F 100%);
     border-radius: 15px; }
     main .condition-sliders__input::-webkit-slider-thumb {
       -webkit-appearance: none;
       padding: 9px;
-      width: 50px;
-      height: 50px;
+      width: 55px;
+      height: 55px;
       background-image: url("../../src/img/scroll.png");
       background-size: cover;
       cursor: pointer; }
@@ -123,7 +123,7 @@ main {
   main .condition-sliders__button-plus {
     display: flex;
     justify-content: center;
-    padding-top: 27px;
+    padding-top: 34px;
     width: 70px;
     height: 70px;
     border: none;
@@ -137,52 +137,61 @@ main {
   main .calculations {
     display: flex;
     justify-content: start;
-    flex-direction: column; }
+    flex-direction: column;
+    line-height: 34px; }
     main .calculations__text {
       font-size: 24px;
       color: #000978;
       margin: 0;
-      margin-left: 150px;
-      padding: 0; }
+      padding: 0;
+      padding-left: 148px;
+      padding-top: 17px;
+      letter-spacing: 1px; }
+      main .calculations__text-data {
+        padding-top: 0px; }
+      main .calculations__text strong {
+        font-family: 'RubikBold'; }
     main .calculations__button-take-money {
-      width: 570px;
+      width: 568px;
       height: 70px;
-      margin: 40px auto 0px 140px;
+      margin: 30px auto 0px 140px;
       border: none;
       border-radius: 10px;
       background: #FF182F;
       color: white;
       font-size: 28px;
-      font-weight: bold;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      letter-spacing: 1px; }
 
 .advantages {
   background-color: #E5E9F4;
-  padding-bottom: 100px; }
-  .advantages .features {
+  padding-bottom: 90px; }
+  .advantages .container .features {
     display: flex;
-    justify-content: center;
     padding-top: 100px; }
-    .advantages .features__img-small {
-      height: 150px !important;
-      padding-top: 10px; }
-    .advantages .features__item {
+    .advantages .container .features__img-small {
+      padding-top: 18px; }
+    .advantages .container .features__item {
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
-      margin-top: 0;
-      margin-left: 0px;
-      min-width: 300px; }
-      .advantages .features__item img {
-        width: auto;
-        height: 150px;
-        max-height: 160px;
+      margin: 0;
+      padding: 0;
+      padding-left: 18px; }
+      .advantages .container .features__item-second {
+        padding-left: 0px;
+        margin-left: 30px; }
+      .advantages .container .features__item-third {
+        padding-left: 0px;
+        margin-left: 20px; }
+      .advantages .container .features__item img {
         margin-bottom: 40px; }
-      .advantages .features__item span {
+      .advantages .container .features__item span {
         color: #2431A5;
         font-size: 23px;
-        line-height: 30px; }
+        line-height: 30px;
+        padding-top: 3px; }
 
 .about {
   position: relative;
@@ -215,7 +224,8 @@ main {
     text-transform: uppercase;
     color: #000978; }
     .about__header h2 {
-      margin-left: 40px;
+      margin-left: 60px;
+      margin-top: 90px;
       font-size: 40px;
       font-family: 'RubikBold'; }
 
@@ -257,42 +267,42 @@ main {
 
 .company {
   margin-top: -80px;
-  padding-bottom: 55px;
+  padding-bottom: 120px;
   background: url("../../src/img/company/bg.png");
   background-size: cover !important; }
   .company__features {
     width: 100%; }
   .company__header {
-    padding-top: 60px;
+    padding-top: 62px;
+    padding-left: 5px;
     margin-bottom: 40px;
     margin-left: 50px;
     font-weight: bolder;
     color: #FF182F;
-    font-size: 36px;
+    font-size: 39px;
     text-align: center;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-family: 'RubikBold'; }
   .company .wrap {
-    display: grid;
-    grid-template-columns: 1fr 1fr; }
+    display: flex;
+    flex-wrap: wrap; }
     .company .wrap__item {
       position: relative;
-      display: flex;
-      min-height: 250px;
-      max-width: 570px;
-      margin-left: 20px; }
+      display: flex; }
+      .company .wrap__item:nth-child(even) {
+        padding-left: 41px; }
       .company .wrap__item::before {
         content: '';
         position: absolute;
-        width: 250px;
+        width: 270px;
         height: 5px;
-        top: 17%;
-        left: 50%;
+        top: 11%;
+        left: 55%;
         border-radius: 10px;
         background-color: #FF182F; }
-      .company .wrap__item .image {
-        margin-top: 20px;
-        height: 120px;
-        min-width: 125px; }
+      .company .wrap__item .image img {
+        padding-top: 7px;
+        padding-left: 10px; }
       .company .wrap__item-long {
         grid-column: 1/3;
         margin: 0 auto;
@@ -309,19 +319,18 @@ main {
           left: 45%;
           border-radius: 10px;
           background-color: #FF182F; }
-      .company .wrap__item img {
-        height: 100%;
-        width: auto; }
   .company .card-company__text {
     position: relative;
-    margin-top: 80px;
-    margin-left: 65px;
-    font-size: 20px;
+    margin-top: 74px;
+    margin-left: 40px;
+    font-size: 22px;
+    line-height: 29px;
     color: #22339E; }
   .company .card-company__text-check {
     display: inline-block;
     position: absolute;
     top: -30%;
+    left: 5%;
     width: 30px;
     height: 30px;
     background: url("../../src/img/company/icons/check.png");
@@ -335,17 +344,21 @@ main {
   background-color: #FF182F;
   color: white;
   font-size: 22px; }
+  .footer__img-logo {
+    padding-top: 10px;
+    padding-left: 17px;
+    max-width: 288px; }
   .footer .call {
     display: flex;
     justify-content: center;
     align-items: start;
-    flex-direction: row; }
+    flex-direction: row;
+    padding-left: 40px; }
     .footer .call img {
       margin-top: 15px; }
   .footer__item {
     min-height: 150px; }
   .footer img {
-    max-width: 320px;
     margin-bottom: 100px; }
   .footer span {
     display: block; }
@@ -768,7 +781,7 @@ main {
 .prev {
   content: '';
   position: absolute;
-  top: 45%;
+  top: 42%;
   left: -6%;
   transform: translateY(-50%) rotate(180deg);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
@@ -779,7 +792,7 @@ main {
 
 .next {
   position: absolute;
-  top: 45%;
+  top: 42%;
   right: 1%;
   transform: translateY(-50%);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
@@ -787,3 +800,6 @@ main {
   width: 25px;
   height: 50px;
   border: none; }
+
+.container {
+  max-width: 1170px !important; }
