--- a/src/style.scss
+++ b/src/style.scss
@@ -18,7 +18,7 @@
 @font-face { 
   font-family: 'RubikBold';
   src: url('../../src/fonts/Rubik-Bold.ttf');
-  font-weight: 500;
+  font-weight: 700;
 }
 
 *{
@@ -34,36 +34,35 @@ html {
 }
 
 header {
-  position: relative;
-  height: 125px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: $bgCol;
 
-  .logo {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 9%;
-    height: 70px;
-    width: 370px;
-  }
-
-  .button-take {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 5%;
-    width: 260px;
-    height: 70px;
-    background: linear-gradient(0deg, rgba(0, 9, 120, 1) 0%, rgba(34, 51, 158, 1) 100%);
-    color: white;
-    font-size: 28px;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 7px;
-    font-weight: bold;
+  .header{
+    position: relative;
+    height: 135px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 17px;
+    max-width: 1170px;
+    .logo {
+      height: 70px;
+      width: 370px;
+      margin-left: 14px;
+    }
+  
+    .button-take {
+      width: 270px;
+      height: 70px;
+      background: linear-gradient(0deg, rgba(0, 9, 120, 1) 0%, rgba(34, 51, 158, 1) 100%);
+      color: white;
+      font-size: 28px;
+      text-transform: uppercase;
+      border: none;
+      border-radius: 7px;
+      font-weight: bold;
+      margin-right: -46px;
+      letter-spacing: 1px;
+    }
   }
 }
 
@@ -82,6 +81,9 @@ main {
     flex-direction: column;
     &__item{
       margin-bottom: 60px;
+      &-down{
+        margin-top: 8px;
+      }
     }
     .option-money {
       display: flex;
@@ -89,8 +91,8 @@ main {
       align-items: center;
       height: 350px;
       width: 60%;
-      margin: 500px auto 30px auto;
-      padding-left: 80px;
+      margin: 490px auto 30px auto;
+      padding-left: 90px;
     }
   }
 
@@ -110,7 +112,7 @@ main {
 
     &__value {
       text-align: right;
-      margin-left: 20px;
+      margin-left: 10px;
       transform: translateY(-15px);
       text-transform: uppercase;
       font-size: 28px;
@@ -123,7 +125,7 @@ main {
     &__button-minus {
       display: flex;
       justify-content: center;
-      padding-top: 22px;
+      padding-top: 32px;
       width: 70px;
       height: 70px;
       border: none;
@@ -142,11 +144,11 @@ main {
 
     &__input {
       -webkit-appearance: none;
-      margin-top: 25px;
+      margin-top: 30px;
       margin-left: 30px;
       margin-right: 30px;
       width: 63%;
-      height: 20px;
+      height: 15px;
       padding: 0px;
       background: linear-gradient(90deg, $btnBgColTwo 1%, $bgCol 100%);
       border-radius: 15px;
@@ -154,8 +156,8 @@ main {
       &::-webkit-slider-thumb {
         -webkit-appearance: none;
         padding: 9px;
-        width: 50px;
-        height: 50px;
+        width: 55px;
+        height: 55px;
         background-image: url("../../src/img/scroll.png");
         background-size: cover;
         cursor: pointer;
@@ -171,7 +173,7 @@ main {
     &__button-plus {
       display: flex;
       justify-content: center;
-      padding-top: 27px;
+      padding-top: 34px;
       width: 70px;
       height: 70px;
       border: none;
@@ -191,26 +193,35 @@ main {
     display: flex;
     justify-content: start;
     flex-direction: column;
+    line-height: 34px;
     &__text {
       font-size: 24px;
       color: $btnBgColTwo;
       margin: 0;
-      margin-left: 150px;
       padding: 0;
+      padding-left: 148px;
+      padding-top: 17px;
+      letter-spacing: 1px;
+      &-data{
+        padding-top: 0px;
+      }
+      strong{
+        font-family: 'RubikBold';
+      }
     }
 
     // .calculations__button-take-money
     &__button-take-money {
-      width: 570px;
+      width: 568px;
       height: 70px;
-      margin: 40px auto 0px 140px;
+      margin: 30px auto 0px 140px;
       border: none;
       border-radius: 10px;
       background: $bgCol;
       color: white;
       font-size: 28px;
-      font-weight: bold;
       text-transform: uppercase;
+      letter-spacing: 1px;
     }
   }
 }
@@ -219,38 +230,43 @@ main {
 
 .advantages {
   background-color: #E5E9F4;
-  padding-bottom: 100px;
-  .features {
-    display: flex;
-    justify-content: center;
-    padding-top: 100px;
-    // .features__item
-    &__img{
-      &-small{
-        height: 150px !important;
-        padding-top: 10px;
-      }
-    }
-    &__item {
+  padding-bottom: 90px;
+  .container{
+    .features {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      margin-top: 0;
-      margin-left: 0px;
-      min-width: 300px;
-      
-      img {
-        width: auto;
-        height: 150px;
-        max-height: 160px;
-        margin-bottom: 40px;
+      padding-top: 100px;
+      // .features__item
+      &__img{
+        &-small{
+          padding-top: 18px;
+        }
       }
-  
-      span {
-        color: #2431A5;
-        font-size: 23px;
-        line-height: 30px;
+      &__item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        padding-left: 18px;
+        &-second {
+          padding-left: 0px;
+          margin-left: 30px;
+        }
+        &-third{
+          padding-left: 0px;
+          margin-left: 20px;
+        }
+        img {
+          margin-bottom: 40px;
+        }
+    
+        span {
+          color: #2431A5;
+          font-size: 23px;
+          line-height: 30px;
+          padding-top: 3px;
+        }
       }
     }
   }
@@ -329,7 +345,8 @@ main {
     color: $btnBgColTwo;
 
     h2 {
-      margin-left: 40px;
+      margin-left: 60px;
+      margin-top: 90px;
       font-size: 40px;
       font-family: 'RubikBold';
     }
@@ -394,7 +411,7 @@ main {
 
 .company {
   margin-top: -80px;
-  padding-bottom: 55px;
+  padding-bottom: 120px;
   background: url("../../src/img/company/bg.png");
   background-size: cover !important;
   // .company__features
@@ -404,44 +421,46 @@ main {
   }
 
   &__header {
-    padding-top: 60px;
+    padding-top: 62px;
+    padding-left: 5px;
     margin-bottom: 40px;
     margin-left: 50px;
     font-weight: bolder;
     color: $bgCol;
-    font-size: 36px;
+    font-size: 39px;
     text-align: center;
     text-transform: uppercase;
+    font-family: 'RubikBold';
   }
 
   .wrap {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-wrap: wrap;
 
     // .wrap__item
     &__item {
       position: relative;
       display: flex;
-      min-height: 250px;
-      max-width: 570px;
-      margin-left: 20px;
-
+      &:nth-child(even){
+        padding-left: 41px;
+      }
       &::before {
         content: '';
         position: absolute;
-        width: 250px;
+        width: 270px;
         height: 5px;
-        top: 17%;
-        left: 50%;
+        top: 11%;
+        left: 55%;
         border-radius: 10px;
         background-color: $bgCol;
 
       }
 
       .image {
-        margin-top: 20px;
-        height: 120px;
-        min-width: 125px;
+        img{
+          padding-top: 7px;
+          padding-left: 10px;
+        }
       }
 
       &-long {
@@ -464,11 +483,6 @@ main {
 
         }
       }
-
-      img {
-        height: 100%;
-        width: auto;
-      }
     }
 
     // .wrap__item-long
@@ -480,9 +494,10 @@ main {
 
     &__text {
       position: relative;
-      margin-top: 80px;
-      margin-left: 65px;
-      font-size: 20px;
+      margin-top: 74px;
+      margin-left: 40px;
+      font-size: 22px;
+      line-height: 29px;
       color: $btnBgCol0ne;
     }
 
@@ -492,6 +507,7 @@ main {
       display: inline-block;
       position: absolute;
       top: -30%;
+      left: 5%;
       width: 30px;
       height: 30px;
       background: url('../../src/img/company/icons/check.png');
@@ -515,6 +531,13 @@ main {
   background-color: $bgCol;
   color: white;
   font-size: 22px;
+  &__img{
+    &-logo{
+      padding-top: 10px;
+      padding-left: 17px;
+      max-width: 288px;
+    }
+  }
 
   // .footer__item
   .call {
@@ -522,6 +545,7 @@ main {
     justify-content: center;
     align-items: start;
     flex-direction: row;
+    padding-left: 40px;
 
     img {
       margin-top: 15px;
@@ -533,7 +557,6 @@ main {
   }
 
   img {
-    max-width: 320px;
     margin-bottom: 100px;
   }
 
@@ -1242,7 +1265,7 @@ main {
 .prev {
   content: '';
   position: absolute;
-  top: 45%;
+  top: 42%;
   left: -6%;
   transform: translateY(-50%) rotate(180deg);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
@@ -1254,7 +1277,7 @@ main {
 .next
 {
   position: absolute;
-  top: 45%;
+  top: 42%;
   right: 1%;
   transform: translateY(-50%);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
@@ -1262,4 +1285,9 @@ main {
   width: 25px;
   height: 50px; 
   border: none;
+}
+
+
+.container{
+  max-width: 1170px !important;
 }
