--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,15 +195,17 @@ main {
 
 .about {
   position: relative;
-  margin-bottom: 100px; }
+  margin-bottom: 100px;
+  margin-left: 30px;
+  max-height: 525px; }
   .about__marks-up {
     position: absolute;
     width: 70px;
     height: 40px;
     background: url("../../src/img/about/marks.png");
     background-size: cover;
-    top: -10%;
-    left: -2%;
+    top: -12%;
+    left: -5%;
     z-index: 100; }
   .about__marks-down {
     position: absolute;
@@ -212,8 +214,8 @@ main {
     background: url("../../src/img/about/marks.png");
     background-size: cover;
     transform: rotate(180deg);
-    top: 68%;
-    left: 73%;
+    top: 66%;
+    left: 69%;
     z-index: 100; }
   .about__header {
     width: 100%;
@@ -224,7 +226,7 @@ main {
     text-transform: uppercase;
     color: #000978; }
     .about__header h2 {
-      margin-left: 60px;
+      margin-left: 30px;
       margin-top: 90px;
       font-size: 40px;
       font-family: 'RubikBold'; }
@@ -235,7 +237,11 @@ main {
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-left: 100px; }
+  margin-left: 50px; }
+  .carousel__text strong {
+    letter-spacing: 0px;
+    font-family: 'RubikBold';
+    text-transform: uppercase; }
   .carousel__item {
     position: relative;
     display: flex !important;
@@ -245,8 +251,12 @@ main {
     margin-left: 10px;
     margin-top: 75px;
     padding-top: 20px; }
+    .carousel__item:nth-child(3) {
+      margin-right: -25px; }
+    .carousel__item:nth-child(4) {
+      margin-left: -17px; }
     .carousel__item div {
-      margin-top: -15px; }
+      margin-top: -4px; }
     .carousel__item img {
       width: 120px;
       height: 120px;
@@ -255,25 +265,29 @@ main {
       margin-right: 50px;
       margin-top: 10px; }
     .carousel__item p {
-      font-size: 26px;
+      letter-spacing: 1.4px;
+      font-size: 23px;
       color: #FF182F;
       width: 80%; }
     .carousel__item span {
       display: inline-block;
       width: 80%;
-      font-size: 19px;
+      font-size: 21px;
       font-style: italic;
-      color: #000978; }
+      color: #000978;
+      margin-top: -3px;
+      line-height: 25px;
+      letter-spacing: -0.4px; }
 
 .company {
   margin-top: -80px;
-  padding-bottom: 120px;
+  padding-bottom: 50px;
   background: url("../../src/img/company/bg.png");
   background-size: cover !important; }
   .company__features {
     width: 100%; }
   .company__header {
-    padding-top: 62px;
+    padding-top: 86px;
     padding-left: 5px;
     margin-bottom: 40px;
     margin-left: 50px;
@@ -282,15 +296,45 @@ main {
     font-size: 39px;
     text-align: center;
     text-transform: uppercase;
-    font-family: 'RubikBold'; }
+    font-family: 'RubikBold';
+    letter-spacing: 0.7px; }
   .company .wrap {
     display: flex;
     flex-wrap: wrap; }
     .company .wrap__item {
       position: relative;
-      display: flex; }
+      display: flex;
+      max-height: 255px;
+      margin-bottom: 23px; }
       .company .wrap__item:nth-child(even) {
-        padding-left: 41px; }
+        padding-left: 46px; }
+        .company .wrap__item:nth-child(even)::before {
+          left: 61%; }
+      .company .wrap__item:nth-child(3) .card-company__text {
+        margin-left: 65px;
+        margin-bottom: 21px; }
+        .company .wrap__item:nth-child(3) .card-company__text-lorem {
+          width: 100%; }
+        .company .wrap__item:nth-child(3) .card-company__text-check {
+          top: -43%; }
+      .company .wrap__item:nth-child(3) img {
+        padding-left: 33px !important; }
+      .company .wrap__item:nth-child(4) .card-company__text-lorem {
+        width: 122%; }
+      .company .wrap__item:nth-child(5) {
+        margin-top: -4px; }
+        .company .wrap__item:nth-child(5) .card-company__text-lorem {
+          width: 105%;
+          margin-left: 7px; }
+        .company .wrap__item:nth-child(5) .card-company__text-check {
+          left: 7%;
+          top: -37%; }
+      .company .wrap__item:nth-child(6) .card-company__text-check {
+        top: -40%; }
+      .company .wrap__item:nth-child(6) .card-company__text-lorem {
+        width: 122%;
+        margin-left: -2px;
+        margin-top: -5px; }
       .company .wrap__item::before {
         content: '';
         position: absolute;
@@ -304,16 +348,21 @@ main {
         padding-top: 7px;
         padding-left: 10px; }
       .company .wrap__item-long {
-        grid-column: 1/3;
-        margin: 0 auto;
-        margin-top: 15px;
-        width: 750px; }
+        margin-top: -10px;
+        padding: 5px 216px; }
         .company .wrap__item-long .card-company__text-lorem {
-          width: 120% !important; }
+          width: 100%;
+          letter-spacing: 0.6px;
+          padding-top: 2px; }
+          .company .wrap__item-long .card-company__text-lorem strong {
+            font-family: 'RubikBold'; }
+        .company .wrap__item-long .card-company__text-check {
+          top: -44%;
+          left: 4%; }
         .company .wrap__item-long::before {
           content: '';
           position: absolute;
-          width: 400px;
+          width: 470px;
           height: 5px;
           top: 15%;
           left: 45%;
@@ -326,11 +375,14 @@ main {
     font-size: 22px;
     line-height: 29px;
     color: #22339E; }
+    .company .card-company__text-lorem {
+      width: 125%;
+      letter-spacing: 0.5px; }
   .company .card-company__text-check {
     display: inline-block;
     position: absolute;
-    top: -30%;
-    left: 5%;
+    top: -36%;
+    left: 6%;
     width: 30px;
     height: 30px;
     background: url("../../src/img/company/icons/check.png");
@@ -339,11 +391,14 @@ main {
     color: #FF182F; }
 
 .footer {
-  min-height: 180px;
   padding-top: 50px;
   background-color: #FF182F;
   color: white;
-  font-size: 22px; }
+  font-size: 20px; }
+  .footer span {
+    padding-left: 15px;
+    margin-top: -12px;
+    letter-spacing: 0.4px; }
   .footer__img-logo {
     padding-top: 10px;
     padding-left: 17px;
@@ -353,7 +408,9 @@ main {
     justify-content: center;
     align-items: start;
     flex-direction: row;
-    padding-left: 40px; }
+    padding: 0;
+    padding-left: 40px;
+    margin-top: -4px; }
     .footer .call img {
       margin-top: 15px; }
   .footer__item {
@@ -365,18 +422,23 @@ main {
   .footer .text__number {
     margin: 0;
     padding: 0;
+    padding-left: 15px;
     font-family: 'RubikBold';
     font-size: 34px;
     color: #000978; }
   .footer .text__lorem {
+    margin-top: -6px;
+    padding-left: 40px;
+    letter-spacing: 0.3px;
     font-size: 16px; }
   .footer .list {
     margin-left: 90px;
-    line-height: 35px;
+    padding-top: 8px;
+    line-height: 22px;
     list-style-type: none;
     color: white; }
     .footer .list__item {
-      margin-bottom: 5px;
+      margin-bottom: 20px;
       font-size: 18px; }
       .footer .list__item a {
         color: white;
@@ -781,8 +843,8 @@ main {
 .prev {
   content: '';
   position: absolute;
-  top: 42%;
-  left: -6%;
+  top: 21%;
+  left: -4%;
   transform: translateY(-50%) rotate(180deg);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
   background-size: cover;
@@ -792,8 +854,8 @@ main {
 
 .next {
   position: absolute;
-  top: 42%;
-  right: 1%;
+  top: 21%;
+  right: -3%;
   transform: translateY(-50%);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
   background-size: cover;
