--- a/src/style.scss
+++ b/src/style.scss
@@ -280,6 +280,8 @@ main {
 .about {
   position: relative;
   margin-bottom: 100px;
+  margin-left: 30px;
+  max-height: 525px;
   // .about__arrow
 
   &__marks {
@@ -289,8 +291,8 @@ main {
       height: 40px;
       background: url("../../src/img/about/marks.png");
       background-size: cover;
-      top: -10%;
-      left: -2%;
+      top: -12%;
+      left: -5%;
       z-index: 100;
     }
 
@@ -301,8 +303,8 @@ main {
       background: url("../../src/img/about/marks.png");
       background-size: cover;
       transform: rotate(180deg);
-      top: 68%;
-      left: 73%;
+      top: 66%;
+      left: 69%;
       z-index: 100;
     }
   }
@@ -345,7 +347,7 @@ main {
     color: $btnBgColTwo;
 
     h2 {
-      margin-left: 60px;
+      margin-left: 30px;
       margin-top: 90px;
       font-size: 40px;
       font-family: 'RubikBold';
@@ -360,11 +362,16 @@ main {
   justify-content: center;
   align-items: center;
   margin: auto;
-  margin-left: 100px;
+  margin-left: 50px;
 
-  // &__text{
-  //   width: 50%;
-  // }
+  &__text{
+
+    strong{
+      letter-spacing: 0px;
+      font-family: 'RubikBold';
+      text-transform: uppercase;
+    }
+  }
 
   // .carousel__item
 
@@ -377,8 +384,14 @@ main {
     margin-left: 10px;
     margin-top: 75px;
     padding-top: 20px;
+    &:nth-child(3){
+      margin-right: -25px;
+    }
+    &:nth-child(4){
+      margin-left: -17px;
+    }
     div {
-      margin-top: -15px;
+      margin-top: -4px;
     }
 
     img {
@@ -391,7 +404,8 @@ main {
     }
 
     p {
-      font-size: 26px;
+      letter-spacing: 1.4px;
+      font-size: 23px;
       color: $bgCol;
       width: 80%;
     }
@@ -399,9 +413,12 @@ main {
     span {
       display: inline-block;
       width: 80%;
-      font-size: 19px;
+      font-size: 21px;
       font-style: italic;
       color: $btnBgColTwo;
+      margin-top: -3px;
+      line-height: 25px;
+      letter-spacing: -0.4px;
     }
   }
 }
@@ -411,7 +428,7 @@ main {
 
 .company {
   margin-top: -80px;
-  padding-bottom: 120px;
+  padding-bottom: 50px;
   background: url("../../src/img/company/bg.png");
   background-size: cover !important;
   // .company__features
@@ -421,7 +438,7 @@ main {
   }
 
   &__header {
-    padding-top: 62px;
+    padding-top: 86px;
     padding-left: 5px;
     margin-bottom: 40px;
     margin-left: 50px;
@@ -431,6 +448,7 @@ main {
     text-align: center;
     text-transform: uppercase;
     font-family: 'RubikBold';
+    letter-spacing: 0.7px;
   }
 
   .wrap {
@@ -441,8 +459,70 @@ main {
     &__item {
       position: relative;
       display: flex;
+      max-height: 255px;
+      margin-bottom: 23px;
       &:nth-child(even){
-        padding-left: 41px;
+        padding-left: 46px;
+        &::before{
+          left: 61%;
+        }
+      }
+      &:nth-child(3){
+        .card-company{
+          &__text{
+            margin-left: 65px;
+            margin-bottom: 21px;
+            &-lorem{
+              width: 100%;
+            }
+            &-check{
+              top: -43%;
+            }
+          }
+        }
+       img{
+        padding-left: 33px !important;
+       }
+      }
+      &:nth-child(4){
+        .card-company{
+          &__text{
+            &-lorem{
+              width: 122%;
+            }
+            &-check{
+            }
+          }
+        }
+      }
+      &:nth-child(5){
+        margin-top: -4px;
+        .card-company{
+          &__text{
+            &-lorem{
+              width: 105%;
+              margin-left: 7px;
+            }
+            &-check{
+              left: 7%;
+              top: -37%;
+            }
+          }
+        }
+      }
+      &:nth-child(6){
+        .card-company{
+          &__text{
+            &-check{
+              top: -40%;
+            }
+            &-lorem{
+              width: 122%;
+              margin-left: -2px;
+              margin-top: -5px;
+            }
+          }
+        }
       }
       &::before {
         content: '';
@@ -464,17 +544,24 @@ main {
       }
 
       &-long {
-        grid-column: 1/3;
-        margin: 0 auto;
-        margin-top: 15px;
-        width: 750px;
-        .card-company__text-lorem {
-          width: 120% !important;
+        margin-top: -10px;
+        padding: 5px 216px;
+        .card-company__text-lorem{
+          width: 100%;
+          letter-spacing: 0.6px;
+          padding-top: 2px;
+          strong{
+            font-family: 'RubikBold';
+          }
+        }
+        .card-company__text-check {
+          top: -44%;
+          left: 4%;
         }     
         &::before {
           content: '';
           position: absolute;
-          width: 400px;
+          width: 470px;
           height: 5px;
           top: 15%;
           left: 45%;
@@ -499,6 +586,10 @@ main {
       font-size: 22px;
       line-height: 29px;
       color: $btnBgCol0ne;
+      &-lorem{
+        width: 125%;
+    letter-spacing: 0.5px;
+      }
     }
 
     // .card-company__text-check
@@ -506,8 +597,8 @@ main {
     &__text-check {
       display: inline-block;
       position: absolute;
-      top: -30%;
-      left: 5%;
+      top: -36%;
+      left: 6%;
       width: 30px;
       height: 30px;
       background: url('../../src/img/company/icons/check.png');
@@ -526,11 +617,15 @@ main {
 // SECTION FOOTER
 
 .footer {
-  min-height: 180px;
   padding-top: 50px;
   background-color: $bgCol;
   color: white;
-  font-size: 22px;
+  font-size: 20px;
+    span{
+      padding-left: 15px;
+      margin-top: -12px;
+      letter-spacing: 0.4px;
+  }
   &__img{
     &-logo{
       padding-top: 10px;
@@ -545,8 +640,9 @@ main {
     justify-content: center;
     align-items: start;
     flex-direction: row;
+    padding: 0;
     padding-left: 40px;
-
+    margin-top: -4px;
     img {
       margin-top: 15px;
     }
@@ -569,12 +665,12 @@ main {
   &__item-list {}
 
   .text {
-
     // .text__number
 
     &__number {
       margin: 0;
       padding: 0;
+      padding-left: 15px;
       font-family: 'RubikBold';
       font-size: 34px;
       color: $btnBgColTwo;
@@ -583,20 +679,24 @@ main {
     // .text__lorem
 
     &__lorem {
+      margin-top: -6px;
+      padding-left: 40px;
+      letter-spacing: 0.3px;
       font-size: 16px;
     }
   }
 
   .list {
     margin-left: 90px;
-    line-height: 35px;
+    padding-top: 8px;
+    line-height: 22px;
     list-style-type: none;
     color: white;
 
     // .list__item
 
     &__item {
-      margin-bottom: 5px;
+      margin-bottom: 20px;
       font-size: 18px;
 
       a {
@@ -1265,8 +1365,8 @@ main {
 .prev {
   content: '';
   position: absolute;
-  top: 42%;
-  left: -6%;
+  top: 21%;
+  left: -4%;
   transform: translateY(-50%) rotate(180deg);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
   background-size: cover;
@@ -1277,8 +1377,8 @@ main {
 .next
 {
   position: absolute;
-  top: 42%;
-  right: 1%;
+  top: 21%;
+  right: -3%;
   transform: translateY(-50%);
   background: url("../../src/img/about/arrow.png") center center no-repeat;
   background-size: cover;
