--- a/public/css/style.css
+++ b/public/css/style.css
@@ -452,14 +452,14 @@ main {
     header .header .logo {
       position: absolute;
       top: 50%;
-      left: 8%;
+      left: 14%;
       transform: translateY(-50%);
       height: 50px;
       width: auto; }
     header .header .button-take {
       position: absolute;
       top: 50%;
-      right: 5%;
+      right: 14%;
       transform: translateY(-50%);
       min-width: 300px;
       font-size: 23px; }
@@ -480,40 +480,65 @@ main {
     padding-top: 0;
     flex-direction: column; }
     .advantages .features__item {
-      margin: 30px auto;
+      margin: 30px auto !important;
       max-width: 60%; }
       .advantages .features__item img {
         min-height: 200px; }
       .advantages .features__item span {
         font-size: 22px !important; }
-  .carousel p {
-    font-size: 20px; }
-  .carousel__item span {
-    font-size: 18px; }
-  .carousel__item img {
-    width: 80px;
-    height: 80px;
-    min-width: 80px;
-    min-height: 80px;
-    margin-right: 10px; }
-  .carousel .prev {
-    left: -12%; }
-  .carousel .next {
-    right: 5%; }
+  .carousel {
+    margin-left: 0px; }
+    .carousel p {
+      font-size: 20px; }
+    .carousel__item span {
+      font-size: 18px; }
+    .carousel__item img {
+      width: 80px;
+      height: 80px;
+      min-width: 80px;
+      min-height: 80px;
+      margin-right: 10px; }
+    .carousel .prev {
+      left: 0%; }
+    .carousel .next {
+      right: -5%; }
+  .about__header {
+    margin-left: 0px; }
+  .company__header {
+    margin-left: 0;
+    padding-left: 0; }
   .company .card-company__text {
     font-size: 19px;
-    margin-top: 50px;
-    margin-left: 55px; }
+    margin-top: 30px;
+    margin-left: 15px; }
     .company .card-company__text-check {
       top: -15%;
       left: -5%; }
-  .company .wrap__item .image {
-    height: 100px;
-    min-width: 80px; }
+      .company .card-company__text-check:nth-child(1) {
+        top: -20%;
+        left: 3%; }
+    .company .card-company__text-lorem {
+      width: 100% !important; }
+  .company .wrap__item:nth-child(even) {
+    padding-left: 0px; }
+  .company .wrap__item:nth-child(5) .card-company__text-check {
+    top: -27%; }
+  .company .wrap__item:nth-child(6) .card-company__text-check {
+    top: -27%; }
+  .company .wrap__item:nth-child(7)::before {
+    top: 12%;
+    left: 46% !important;
+    width: 300px; }
   .company .wrap__item::before {
-    top: 10%;
-    left: 50%;
-    width: 170px; }
+    top: 6%;
+    left: 50% !important;
+    width: 225px; }
+  .company .wrap__item:nth-child(3) .card-company__text-lorem {
+    width: 125% !important;
+    margin-left: -10%; }
+  .company .wrap__item:nth-child(3) .card-company__text-check {
+    top: -28%;
+    left: -5%; }
   .company .wrap__item-long::before {
     top: 15%;
     left: 30%;
